[package]
name = "newsletter"
version = "0.1.0"
authors = ["Francis Masha <francismasha96@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4"
chrono = "0.4.19"
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
env_logger = "0.10.0"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7.2"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "1", features = ["v4"] }
serde-aux = "4.1.0"
unicode-segmentation = "1.9.0"
validator = "0.16.0"
rand = "0.8.4"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
once_cell = "1"
claim = "0.5"
fake = "~2.5"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.5.13"
serde_json = "1"
